2011-11-16  Dirk Pranke  <dpranke@chromium.org>

        Run a dummy test in the gpu configurations if there's nothing to do.
        https://bugs.webkit.org/show_bug.cgi?id=72498

        Reviewed by James Robinson.

        * Scripts/webkitpy/layout_tests/port/chromium_gpu.py:

2011-11-16  Ryosuke Niwa  <rniwa@webkit.org>

        contributors_by_fuzzy_match is super slow
        https://bugs.webkit.org/show_bug.cgi?id=72540

        Reviewed by Eric Seidel.

        Make contributors_by_name do case insensitive search using a dictionary.

        Also call contributors_by_name first in contributors_by_fuzzy_match now that it's fast
        because that's the most common case.

        * Scripts/webkitpy/common/config/committers.py:
        * Scripts/webkitpy/common/config/committers_unittest.py:

2011-11-16  David Levin  <levin@chromium.org>

        check-webkit-style should recognize functions even if they have OVERRIDE after them.
        https://bugs.webkit.org/show_bug.cgi?id=72515

        Reviewed by Adam Barth.

        * Scripts/webkitpy/style/checkers/cpp.py:
        * Scripts/webkitpy/style/checkers/cpp_unittest.py:

2011-11-16  Tony Chang  <tony@chromium.org>

        [NRWT] refactor drivers to require pixel_tests param
        https://bugs.webkit.org/show_bug.cgi?id=72517

        Reviewed by Ojan Vafai.

        No tests, just a refactoring.

        * Scripts/webkitpy/layout_tests/port/chromium.py:
        * Scripts/webkitpy/layout_tests/port/chromium_unittest.py:
        * Scripts/webkitpy/layout_tests/port/webkit.py:
        * Scripts/webkitpy/layout_tests/port/webkit_unittest.py:

2011-11-16  Dirk Pranke  <dpranke@chromium.org>

        Run a dummy test in the gpu configurations if there's nothing to do.
        https://bugs.webkit.org/show_bug.cgi?id=72498

        Reviewed by James Robinson.

        * Scripts/webkitpy/layout_tests/port/chromium_gpu.py:

2011-11-16  Chris Fleizach  <cfleizach@apple.com>
