@@ -137,9 +137,7 @@ class ChromiumDriverTest(unittest.TestCase):
         start_time = time.time()
         driver1.stop()
         driver2.stop()
-        # FIXME: This test is timing out it cygwin. Disable until we get a chance to debug.
-        if sys.platform != 'cygwin':
-            self.assertTrue(time.time() - start_time < 20)
+        self.assertTrue(time.time() - start_time < 20)
 
 
 class ChromiumPortTest(port_testcase.PortTestCase):
